# bs-app

./: .gitignore  Cargo.toml  README.md  build.rs
backend/: Cargo.toml
backend/config/: mqtt_broker.toml  server_cfg.json
backend/src/: config.rs  database.rs  main.rs  mqtt.rs  protocol.rs  server.rs
common/: Cargo.toml
common/src/: request.rs  response.rs
frontend/: .gitignore  Cargo.toml  build.rs  index.html
frontend/js/: package-lock.json  package.json  rollup.config.js
frontend/js/src/: chart.js  index.js  pmap.js
frontend/src/: app.rs  lib.rs  main.rs  protocol.rs  route.rs
frontend/src/components/: content.rs  default.rs  device_content.rs  home.rs  login.rs  mod.rs  modify_device.rs  register.rs
frontend/src/pages/: default.rs  device_content.rs  home.rs  login.rs  logout_hint.rs  modify_device.rs  register.rs
frontend/src/utils/: card_div.rs  line_chart.js  line_chart.rs  map.rs  mod.rs  paged_list.rs
frontend/static/: index.html  style.css  style_narrow.css
frontend/text/app_root/en-US/: main.ftl
frontend/text/app_root/zh-CN/: main.ftl
frontend/text/device_content/en-US/: main.ftl
frontend/text/device_content/zh-CN/: main.ftl
frontend/text/home/en-US/: main.ftl
frontend/text/home/zh-CN/: main.ftl
frontend/text/login/en-US/: main.ftl
frontend/text/login/zh-CN/: main.ftl
frontend/text/logout_hint/en-US/: main.ftl
frontend/text/logout_hint/zh-CN/: main.ftl
frontend/text/modify_device/en-US/: main.ftl
frontend/text/modify_device/zh-CN/: main.ftl
frontend/text/paged_list/en-US/: main.ftl
frontend/text/paged_list/zh-CN/: main.ftl
frontend/text/register/en-US/: main.ftl
frontend/text/register/zh-CN/: main.ftl
src/: main.rs
