[package]
name = "bs-backend"
version = "0.1.0"
authors = ["PepcyCh <pepsich86@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-std = "1.9.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
mongodb = { version = "1.2.1", default-features = false, features = ["async-std-runtime"] }
futures = "0.3.5"
bson = "1.2.2"
regex = "1.4.6"
lazy_static = "1.4.0"
rumqttc = "0.5.0"
rumqttd = "0.5.0"
confy = "0.4.0"

common = { path = "../common" }