[package]
name = "bs-frontend"
version = "0.1.0"
authors = ["PepcyCh <pepsich86@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.40"
# serde = "1.0.125"
serde_json = "1.0.64"
yew = "0.18.0"
yew-router = "0.15.0"
# yew-material = { git = "https://github.com/hamza1311/yew-material/", branch = "master", features = ["full"] }
yew-material = { git = "https://github.com/PepcyCh/yew-material/", branch = "master", features = ["full"] }
wasm-bindgen = "0.2.67"
regex = "1.4.6"
lazy_static = "1.4.0"

common = { path = "../common" }